--- a/mutate.cabal
+++ b/mutate.cabal
@@ -1,6 +1,6 @@
 name:                mutate
-version:             0.3.0.0
-synopsis:            STM shared-state combinators
+version:             0.3.1.0
+synopsis:            mutable state abstractions
 -- description:         
 license:             BSD3
 license-file:        LICENSE
@@ -12,5 +12,5 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 library
-  exposed-modules:     Control.Mutate
+  exposed-modules:     Control.Mutate, Control.Mutate.State
   build-depends:       base ==4.6.*, monad-stm ==0.1.*, mtl ==2.1.*, stm ==2.4.*, transformers-base ==0.4.*
